action and solution votes model updated. attachVotes method updated. fixed votes.currentUser on actions. Vote scores visible in UI

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -147,6 +147,10 @@ md-tooltip {
   }
 }
 
+.vote-score {
+    line-height: normal !important;
+}
+
 .solution-card, .action-card {
   cursor: pointer;
 
